# readwise-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py
tests/: conftest.py  factories.py  test_classifier.py  test_commands.py  test_pricing.py  test_readwise_client.py  test_summarizer.py  test_sync.py  test_tasks.py  test_writer.py
tests/fixtures/: readwise_export.json
wiki/: admin.py  models.py  tasks.py
wiki/management/commands/: init_wiki.py  sync_readwise.py
wiki/migrations/: 0001_initial.py
wiki/services/: classifier.py  llm.py  pricing.py  readwise.py  summarizer.py  sync.py  writer.py
